# compact

./: Cargo.toml
src/: compact.rs  compact_dict.rs  compact_hash_map.rs  compact_opaque.rs  compact_option.rs  compact_str.rs  compact_vec.rs  lib.rs  pointer_to_maybe_compact.rs
