[package]
name = "compact"
description = "Store objects containing dynamic fields either compactly in consecutive memory or using traditional heap pointers"
version = "0.2.14"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/compact"
license = "MIT"
maintenance = { status = "experimental" }

[dependencies]
primal = "0.2.3"
lazy_static = "1.3.0"
simple_allocator_trait = "0.1.0"
serde = {version = "1", optional = true}

[features]
serde-serialization = ["serde"]
